# final-project

./: .gitignore  Cargo.toml  README.md
src/: ant_grid.rs  coord.rs  core.rs  grid_elements.rs  gui.rs  main.rs  tui.rs  tui_runner.rs
src/core/: ant_grid.rs  coord.rs  grid.rs  grid_elements.rs  options.rs  runner.rs  signals.rs  team_element.rs  thread_runner.rs
src/core/grid/: cell.rs  coord.rs  export.rs  grid.rs  team.rs
src/core/grid_elements/: ant.rs  dirt.rs  empty.rs  food.rs  grid_element.rs  hive.rs  state.rs
src/grid_elements/: ant.rs  empty.rs  food.rs  grid_element.rs  hive.rs
src/gui/: gui_runner.rs  image_utils.rs
src/tui/: tui.rs
