[package]
name = "scratch_final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
eframe = { version = "0.21.3", features = ["wgpu", "puffin", "default_fonts"], default-features = false }
egui = "0.21.0"
egui-wgpu = { version = "0.21.0", features = ["winit", "puffin"] }
image = { version = "0.24.6", default-features = false, features = ["rgb"] }
multimap = { version = "0.9.0", default-features = false }
puffin = "0.14.3"
puffin_egui = "0.20.0"
rand = { version = "0.8.5", features = ["small_rng", "simd_support", "nightly"], default-features = true }
strum = "0.24.1"
strum_macros = "0.24.3"
tracing = "0.1.37"
